Support forms in wiki pages

--- a/src/templates/amp.mustache
+++ b/src/templates/amp.mustache
@@ -8,6 +8,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+	{{#has-forms}}<script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>{{/has-forms}}
     <style amp-custom>
         {{{stylesheet}}}
     </style>
