Category link list contains HTML, enable it

--- a/src/templates/amp.mustache
+++ b/src/templates/amp.mustache
@@ -48,7 +48,7 @@
     <div class="actions">
         <a href="{{edit-url}}">{{edit-message}}</a>
     </div>
-	{{#category-links}}<div class="catlinks">{{category-links}}</div>{{/category-links}}
+	{{#category-links}}<div class="catlinks">{{{category-links}}}</div>{{/category-links}}
 </article>
 <footer>
     <div>{{{copyright}}}</div>
